--- a/frontend/ReviewOfCovidSurvivorsAndWarriors/css/shareExperienceSurvivor.css
+++ b/frontend/ReviewOfCovidSurvivorsAndWarriors/css/shareExperienceSurvivor.css
@@ -5,40 +5,77 @@
 
 body {
     font-family: sans-serif;
+    box-sizing: border-box;
 }
 
-a {
+header {
+    margin-top: 2rem;
+}
+
+.logout {
+    height: 100%;
+    width: 100%;
+    outline: none;
+    margin-left: 180vmin;
+    background: green;
+    color: white;
+    padding: 1rem 1rem;
+    font-size: 1rem;
+    cursor: pointer;
     text-decoration: none;
-    display: inline-block;
-    padding: 8px 16px;
-    margin-left: 2vmin;
 }
 
-.previous:hover {
-    background-color: #ddd;
-    color: black;
+.logout:hover {
+    background: transparent;
+    color: green;
+    border: 1px solid rgba(2, 75, 8, 0.925);
+    font-weight: bold;
 }
 
-.previous {
-    background-color: #f1f1f1;
-    color: black;
-    border-radius: 50%;
-    margin-left: 2vmin;
-    margin-top: 2vmin;
-    height: 20px;
-    width: 7px;
-}
-
-.arrow {
-    border: solid black;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
+.errmsg {
+    margin-right: 100vmin;
+    margin-left: 30vmin;
+    justify-content: center;
+    float: left;
+    border-radius: 5px;
+    border: 1px solid red;
+    background: pink;
+    text-align: left;
+    color: brown;
     padding: 3px;
 }
 
-.left {
-    transform: rotate(135deg);
-    -webkit-transform: rotate(135deg);
+.msg {
+    margin-left: 20vmin;
+    margin-top: 3vmin;
+    font-size: 4vw;
+    font-weight: bold;
+    color: teal;
+}
+
+.successmsg {
+    margin-left: 68vmin;
+    margin-top: 10vmin;
+    width: 30%;
+    border-radius: 5px;
+    border: 1px solid green;
+    background: #33CC00;
+    background-size: 100% 100%;
+    text-align: left;
+    color: white;
+    padding: 10px;
+    font-size: 20px;
+    box-shadow: 0 0 20px 2px rgba(150, 247, 111, 0.5);
+}
+
+.heading {
+    margin-left: -130vmin;
+    margin-top: -5vmin;
+    color: #07b966;
+}
+
+.heading:hover {
+    color: #49138f;
 }
 
 .form-box {
@@ -53,7 +90,6 @@ a {
 h1 {
     text-align: center;
     margin-bottom: 40px;
-
 }
 
 .input-box {
@@ -62,6 +98,10 @@ h1 {
     border-bottom: 1px solid #fff;
     padding-top: 10px;
     padding-bottom: 5px;
+}
+
+.input {
+    border-bottom: 0px solid rgb(0, 0, 0);
 }
 
 .input-box input {
@@ -73,6 +113,11 @@ h1 {
 }
 
 ::placeholder {
+    color: #ccc;
+    font-size: 15px;
+}
+
+.details {
     color: #ccc;
     font-size: 15px;
 }
@@ -115,51 +160,6 @@ h1 {
     color: black;
 }
 
-.errmsg {
-    margin-right: 100vmin;
-    margin-left: 30vmin;
-    justify-content: center;
-    float: left;
-    border-radius: 5px;
-    border: 1px solid red;
-    background: pink;
-    text-align: left;
-    color: brown;
-    padding: 3px;
-}
-
-.msg {
-    margin-left: 60vmin;
-    margin-top: 3vmin;
-    font-size: 4vw;
-    font-weight: bold;
-    color: teal;
-}
-
-.successmsg {
-    margin-left: 68vmin;
-    margin-top: 10vmin;
-    width: 30%;
-    border-radius: 5px;
-    border: 1px solid green;
-    background: #33CC00;
-    background-size: 100% 100%;
-    text-align: left;
-    color: white;
-    padding: 10px;
-    font-size: 20px;
-    box-shadow: 0 0 20px 2px rgba(150, 247, 111, 0.5);
-}
-
-.login-btn {
-    background: rgb(4, 94, 1);
-}
-
-.login-btn:hover {
-    background: transparent;
-    border: 1px solid rgb(7, 5, 5);
-}
-
 .choice {
     margin-left: 10vmin;
 
@@ -175,18 +175,8 @@ h1 {
     font-size: 15px;
 }
 
-.login {
-    margin-left: 5vmin;
-    font-size: 18px;
-}
-
-.button {
-    color: white;
-}
-
-.button:hover {
-    background: white;
-    color: black;
+textarea {
+    padding: 6px 6px;
 }
 
 @media(max-width:425px) {
