--- a/frontend/HospitalAndSafehome/CSS/Contactdetails.css
+++ b/frontend/HospitalAndSafehome/CSS/Contactdetails.css
@@ -142,3 +142,39 @@ a:hover {
     font-size: 3vmin;
     margin-top: 18vmin;
 }
+
+table {
+    position: absolute;
+    left: 25%;
+    top: 120%;
+    transform: translate(1%, -4%);
+    border-collapse: collapse;
+    width: 50%;
+    height: 200px;
+    border: 1px solid #bdc3c7;
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2), -1px -1px 8px rgba(0, 0, 0, 0.2);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+tr {
+    transition: all .2s ease-in;
+    cursor: pointer;
+}
+
+th,
+td {
+    padding: 12px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+}
+
+#header {
+    background-color: #15a065;
+    color: #fff;
+}
+
+tr:hover {
+    background-color: #f5f5f5;
+    transform: scale(1.02);
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2), -1px -1px 8px rgba(0, 0, 0, 0.2);
+}
