--- a/frontend/HospitalAndSafehome/CSS/HospitalMobile.css
+++ b/frontend/HospitalAndSafehome/CSS/HospitalMobile.css
@@ -1,8 +1,9 @@
-.navbar-brand{
+.navbar-brand {
   max-width: 40px;
 }
+
 @media (max-width: 768px) {
-  
+
   .menu {
     /*side-bar toggling*/
     position: absolute;
@@ -105,7 +106,11 @@
   }
 
   .section-3 .card {
-    width: 25rem;
+    width: 20rem;
+  }
+
+  .safe {
+    margin-top: -7vmin;
   }
 }
 
