--- a/frontend/HospitalAndSafehome/CSS/NearbyHospitalMobile.css
+++ b/frontend/HospitalAndSafehome/CSS/NearbyHospitalMobile.css
@@ -57,6 +57,11 @@
         background-size: 68rem 32rem;
 
     }
+
+    table {
+        top: 1200px;
+        width: 80%;
+    }
 }
 
 @media only screen and (max-width:425px) {
@@ -148,7 +153,7 @@
         width: 100%;
         background-image: url(../asset/im16.jpg);
         background-repeat: no-repeat;
-        background-size: 20rem 28rem;
+        background-size: 100% 100%;
 
     }
 
@@ -161,6 +166,11 @@
     .section-1 .row .col-md-6 .panel1 p {
         font-size: 11px;
         text-align: center;
+    }
+
+    table {
+        top: 1100px;
+        width: 50%;
     }
 }
 
@@ -214,5 +224,9 @@
 
     .section-1 .row .col-md-6 .panel .btn {
         font-size: 15px;
+    }
+
+    table {
+        top: 1000px;
     }
 }
