--- a/frontend/ReviewOfCovidSurvivorsAndWarriors/css/blog3.css
+++ b/frontend/ReviewOfCovidSurvivorsAndWarriors/css/blog3.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     display: flex;
     min-height: 100vh;
-    background: linear-gradient(135deg, #abd4cf, #b2fc80);
+    background: linear-gradient(#abd4cf, #b2fc80);
     color: rgb(7, 4, 4);
 }
 
@@ -15,12 +15,12 @@ a {
 }
 
 a:hover {
-    background-color: rgb(122, 115, 115);
+    background-color: rgb(95, 190, 219);
     color: black;
 }
 
 .previous {
-    background-color: #668d50;
+    background-color: #3986b3;
     color: black;
     border-radius: 50%;
     margin-left: 2vmin;
@@ -172,7 +172,7 @@ img {
     }
 
     p {
-        font-size: 13px;
+        font-size: 18px;
         margin-left: -15vmin;
     }
 
