--- a/frontend/ReviewOfCovidSurvivorsAndWarriors/css/blog4.css
+++ b/frontend/ReviewOfCovidSurvivorsAndWarriors/css/blog4.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     display: flex;
     min-height: 100vh;
-    background: linear-gradient(135deg, #76f776, #fab908);
+    background: linear-gradient(#76f776, #fab908);
     color: rgb(7, 4, 4);
 }
 
@@ -15,12 +15,12 @@ a {
 }
 
 a:hover {
-    background-color: rgb(115, 122, 116);
+    background-color: rgb(40, 199, 8);
     color: black;
 }
 
 .previous {
-    background-color: #619250;
+    background-color: #6fc253;
     color: black;
     border-radius: 50%;
     margin-left: 2vmin;
@@ -178,7 +178,7 @@ img {
     }
 
     p {
-        font-size: 13px;
+        font-size: 18px;
         margin-left: -15vmin;
     }
 
