--- a/frontend/ReviewOfCovidSurvivorsAndWarriors/css/blog5.css
+++ b/frontend/ReviewOfCovidSurvivorsAndWarriors/css/blog5.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     display: flex;
     min-height: 100vh;
-    background: linear-gradient(135deg, #c0c1fd, #e076fa);
+    background: linear-gradient(#c0c1fd, #e076fa);
     color: rgb(7, 4, 4);
 }
 
@@ -15,12 +15,12 @@ a {
 }
 
 a:hover {
-    background-color: rgb(122, 115, 115);
+    background-color: rgb(115, 171, 214);
     color: black;
 }
 
 .previous {
-    background-color: #537467;
+    background-color: #969cee;
     color: black;
     border-radius: 50%;
     margin-left: 2vmin;
@@ -172,7 +172,7 @@ img {
     }
 
     p {
-        font-size: 13px;
+        font-size: 18px;
         margin-left: -15vmin;
     }
 
