--- a/frontend/ReviewOfCovidSurvivorsAndWarriors/css/blog6.css
+++ b/frontend/ReviewOfCovidSurvivorsAndWarriors/css/blog6.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     display: flex;
     min-height: 100vh;
-    background: linear-gradient(135deg, #f06e84, #7594fc);
+    background: linear-gradient(#f06e84, #7594fc);
     color: rgb(7, 4, 4);
 }
 
@@ -15,12 +15,12 @@ a {
 }
 
 a:hover {
-    background-color: rgb(122, 115, 115);
+    background-color: rgb(233, 168, 168);
     color: black;
 }
 
 .previous {
-    background-color: #537467;
+    background-color: #f8a8a5;
     color: black;
     border-radius: 50%;
     margin-left: 2vmin;
@@ -174,7 +174,7 @@ img {
     }
 
     p {
-        font-size: 13px;
+        font-size: 18px;
         margin-left: -15vmin;
     }
 
