--- a/frontend/HospitalAndSafehome/CSS/NearbyHospital.css
+++ b/frontend/HospitalAndSafehome/CSS/NearbyHospital.css
@@ -236,6 +236,7 @@ table {
     border: 1px solid #bdc3c7;
     box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2), -1px -1px 8px rgba(0, 0, 0, 0.2);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    overflow-x: scroll;
 }
 
 tr {
